[package]
name = "wawatemplating"
version = "0.6.1"
edition = "2021"


[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
blake3 = "1.3.3"
clap = { version = "4.1.6", features = ["derive"] }
emojis = "0.5.2"
handlebars = { version = "4.3.6", features = ["dir_source"] }
hashbrown = { version = "0.13.2", features = ["serde"] }
home = "0.5.4"
lazy_static = "1.4.0"
pulldown-cmark = { version = "0.9.2" }
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
toml = "0.7.2"
yaml-front-matter = "0.1.0"

# FIXME: Change this to a configuration option
[features]
default = ["sass"]
sass = []
