[package]
name = "cuteness"
version = "0.9.4"
edition = "2021"
license = "MIT"
description = "Cute static site (+ server) generator with a bunch of plugins"
homepage = "https://github.com/blyxyas/cuteness"
readme = "README.md"
keywords = ["cuteness", "web", "site", "generator", "codegen"]
categories = ["web-programming"]
include = [
	"Cargo.toml",
	"Cargo.lock",
	"README.md",
	"src/*",
	"cuteconfig.default.toml",
	"SUMMARY.default.toml",
	"introduction.default.md"
]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
anyhow = "1.0.70"
blake3 = "1.3.3"
clap = { version = "4.1.13", features = ["derive"] }
document-features = "0.2.7" 
emojis = "0.5.2"
handlebars = { version = "4.3.6", features = ["dir_source"] }
hashbrown = { version = "0.13.2", features = ["serde"] }
home = "0.5.4"
lazy_static = "1.4.0"
pulldown-cmark = { version = "0.9.2" }
regex = "1.7.3"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
toml = "0.7.3"
walkdir = "2.3.3"
yaml-front-matter = "0.1.0"

# FIXME: Change this to a configuration option
[features]
default = ["sass"]
#! ### Features
## Enables using *[Sass](https://sass-lang.com/)* as a preprocessor. It will preprocess your `.sass` files in `src/static` before copying them to the output directory.
## 
## As a side effect, it also enables the configuration option `sassbin`[^2]
##
## [^2]: The option `sassbin` indicates the name of the Sass preprocessor binary. *(default: `sass`)*
sass = []
